--- a/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
+++ b/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
@@ -36,7 +36,7 @@ else
     <MudGrid>
         <MudItem xs="4">
             <MudPaper Class="pa-4" Style="height: 100%">
-                <MudTable Items="@ViewModel.RaceWeekDrivers" Dense="true">
+                <MudTable Items="@ViewModel.RaceWeekDrivers.OrderBy(e => e.Grid)" Dense="true">
                     <HeaderContent>
                         <MudTh>Grid</MudTh>
                         <MudTh>Name</MudTh>
@@ -146,7 +146,7 @@ else
                 </MudItem>
 
                 <MudItem xs="6">
-                    <MudPaper>
+                    <MudPaper Class="mud-height-full">
                         miauw
                     </MudPaper>
                 </MudItem>
