--- a/SimTECH/SimTECH/Pages/Season/RaceEditor.razor
+++ b/SimTECH/SimTECH/Pages/Season/RaceEditor.razor
@@ -3,7 +3,7 @@
 <MudDialog>
     <TitleContent>
         <MudText Typo="Typo.h6">Add race for round: @IncomingRound</MudText>
-        <MudText Typo="Typo.body1">Stint's can be re-ordered by dragging them</MudText>
+        <MudText Typo="Typo.body1">Stints can be re-ordered by dragging them</MudText>
     </TitleContent>
     <DialogContent>
         <MudForm Model="@Model">
