--- a/SimTECH/SimTECH/Pages/Season/SeasonEngines.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonEngines.razor
@@ -4,7 +4,7 @@
 
 <MudDataGrid T="SeasonEngine" Items="SeasonEngineData" Class="my-2">
     <ToolBarContent>
-        <MudText Typo="Typo.h4">SeasonEngines</MudText>
+        <MudText Typo="Typo.h4">Engines</MudText>
         <MudSpacer />
         <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="EnterEngine">New</MudButton>
     </ToolBarContent>
