--- a/SimTECH/SimTECH/Pages/Racing/Qualifying.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Qualifying.razor
@@ -11,20 +11,16 @@ else
 {
     <MudTabs>
         <MudTabPanel Text="Q1">
-            <MudTable Items="@QualifyingModel.QualifyingDrivers.OrderByDescending(e => e.MaxScoreQ1)">
+            <MudTable Items="@QualifyingModel.QualifyingDrivers.OrderBy(e => e.PositionQ1)">
                 <ToolBarContent>
                     <MudText>
                         <CountryFlag Code="@QualifyingModel.Country" />
                         @QualifyingModel.Name - QUALIFYING
                     </MudText>
                     <MudSpacer />
-                    @if (advancedRuns == QualifyingModel.AmountRuns)
+                    @if (advancedQ1 != QualifyingModel.AmountRuns)
                     {
-                        <MudButton Variant="Variant.Outlined" OnClick="Finish">Finish</MudButton>
-                    }
-                    else
-                    {
-                        <MudButton Variant="Variant.Outlined" OnClick="Advance">Advance</MudButton>
+                        <MudButton Variant="Variant.Outlined" OnClick="AdvanceQ1">Advance</MudButton>
                     }
                 </ToolBarContent>
                 <HeaderContent>
@@ -42,7 +38,7 @@ else
                     <MudTh>Gap</MudTh>
                 </HeaderContent>
                 <RowTemplate>
-                    <MudTd>@(++indexer)</MudTd>
+                    <MudTd>@context.PositionQ1</MudTd>
                     <MudTd>@context.FullName</MudTd>
                     <MudTd>@context.Number</MudTd>
                     <MudTd>@context.TeamName</MudTd>
@@ -52,25 +48,21 @@ else
                         <MudTd>@runResult</MudTd>
                     }
                     <MudTd>@context.MaxScoreQ1</MudTd>
-                    <MudTd>@GapToLeader(context.MaxScoreQ1)</MudTd>
+                    <MudTd>@context.DisplayGapQ1</MudTd>
                 </RowTemplate>
             </MudTable>
         </MudTabPanel>
         <MudTabPanel Text="Q2">
-            <MudTable Items="@QualifyingModel.QualifyingDrivers.OrderByDescending(e => e.MaxScoreQ2)">
+            <MudTable Items="@QualifyingModel.QualifyingDrivers.OrderBy(e => e.PositionQ2)">
                 <ToolBarContent>
                     <MudText>
                         <CountryFlag Code="@QualifyingModel.Country" />
                         @QualifyingModel.Name - QUALIFYING
                     </MudText>
                     <MudSpacer />
-                    @if (advancedRuns == QualifyingModel.AmountRuns)
+                    @if (advancedQ2 != QualifyingModel.AmountRuns)
                     {
-                        <MudButton Variant="Variant.Outlined" OnClick="Finish">Finish</MudButton>
-                    }
-                    else
-                    {
-                        <MudButton Variant="Variant.Outlined" OnClick="Advance">Advance</MudButton>
+                        <MudButton Variant="Variant.Outlined" OnClick="AdvanceQ2">Advance</MudButton>
                     }
                 </ToolBarContent>
                 <HeaderContent>
@@ -88,35 +80,35 @@ else
                     <MudTh>Gap</MudTh>
                 </HeaderContent>
                 <RowTemplate>
-                    <MudTd>@(++indexer)</MudTd>
-                        <MudTd>@context.FullName</MudTd>
-                        <MudTd>@context.Number</MudTd>
-                        <MudTd>@context.TeamName</MudTd>
-                        <MudTd>@context.Power</MudTd>
-                        @foreach (var runResult in context.RunValuesQ1)
+                    <MudTd>@context.PositionQ2</MudTd>
+                    <MudTd>@context.FullName</MudTd>
+                    <MudTd>@context.Number</MudTd>
+                    <MudTd>@context.TeamName</MudTd>
+                    <MudTd>@context.Power</MudTd>
+                    @foreach (var runResult in context.RunValuesQ1)
                     {
                         <MudTd>@runResult</MudTd>
                     }
                     <MudTd>@context.MaxScoreQ1</MudTd>
-                    <MudTd>@GapToLeader(context.MaxScoreQ1)</MudTd>
+                    <MudTd>@context.DisplayGapQ2</MudTd>
                 </RowTemplate>
             </MudTable>
         </MudTabPanel>
         <MudTabPanel Text="Q3">
-            <MudTable Items="@QualifyingModel.QualifyingDrivers.OrderByDescending(e => e.MaxScoreQ3)">
+            <MudTable Items="@QualifyingModel.QualifyingDrivers.OrderBy(e => e.PositionQ3)">
                 <ToolBarContent>
                     <MudText>
                         <CountryFlag Code="@QualifyingModel.Country" />
                         @QualifyingModel.Name - QUALIFYING
                     </MudText>
                     <MudSpacer />
-                    @if (advancedRuns == QualifyingModel.AmountRuns)
+                    @if (advancedQ3 == QualifyingModel.AmountRuns)
                     {
                         <MudButton Variant="Variant.Outlined" OnClick="Finish">Finish</MudButton>
                     }
                     else
                     {
-                        <MudButton Variant="Variant.Outlined" OnClick="Advance">Advance</MudButton>
+                        <MudButton Variant="Variant.Outlined" OnClick="AdvanceQ3">Advance</MudButton>
                     }
                 </ToolBarContent>
                 <HeaderContent>
@@ -134,7 +126,7 @@ else
                     <MudTh>Gap</MudTh>
                 </HeaderContent>
                 <RowTemplate>
-                    <MudTd>@(++indexer)</MudTd>
+                    <MudTd>@context.PositionQ3</MudTd>
                     <MudTd>@context.FullName</MudTd>
                     <MudTd>@context.Number</MudTd>
                     <MudTd>@context.TeamName</MudTd>
@@ -144,7 +136,7 @@ else
                         <MudTd>@runResult</MudTd>
                     }
                     <MudTd>@context.MaxScoreQ3</MudTd>
-                    <MudTd>@GapToLeader(context.MaxScoreQ3)</MudTd>
+                    <MudTd>@context.DisplayGapQ3</MudTd>
                 </RowTemplate>
             </MudTable>
         </MudTabPanel>
@@ -160,10 +152,8 @@ else
     // Alternatively make a custom class which has an identifier for which session the values are
 
     private bool loading = true;
-    private int indexer = 0;
-    private int advancedRuns = 0;
+    private int advancedQ1, advancedQ2, advancedQ3 = 0;
     private int maxRng = 30;
-    private int highestScore = 0;
     private double gapMarge = 0.08;
 
     protected override async Task OnInitializedAsync()
@@ -173,36 +163,76 @@ else
         loading = false;
     }
 
-    private string GapToLeader(int score)
+    private string GapToLeader(int score, int highestScore)
     {
         double gap = ((highestScore - score) * gapMarge);
 
         return $"+{Math.Round(gap, 2)}";
     }
 
-    private void Advance()
+    private void AdvanceQ1()
     {
-        indexer = 0;
+        var positionIndex = 0;
+
+        foreach (var driver in QualifyingModel.QualifyingDrivers)
+            driver.RunValuesQ1[advancedQ1] = driver.GetQualifyingResult(QualifyingModel.Season.QualifyingRNG);
+
+        var highestScore = QualifyingModel.HighestScoreQ1();
 
         foreach (var driver in QualifyingModel.QualifyingDrivers)
         {
-            var randomResult = driver.Power + NumberHelper.RandomInt(maxRng);
-            driver.RunValuesQ1[advancedRuns] = randomResult;
+            driver.Position = ++positionIndex;
+            driver.PositionQ1 = positionIndex;
 
-            if (randomResult > highestScore)
-                highestScore = randomResult;
+            driver.DisplayGapQ1 = GapToLeader(driver.MaxScoreQ1, highestScore);
         }
 
-        advancedRuns++;
+        advancedQ1++;
+    }
+
+    private void AdvanceQ2()
+    {
+        var positionIndex = 0;
+
+        foreach (var driver in QualifyingModel.QualifyingDrivers)
+            driver.RunValuesQ2[advancedQ2] = driver.GetQualifyingResult(QualifyingModel.Season.QualifyingRNG);
+
+        var highestScore = QualifyingModel.HighestScoreQ2();
+
+        foreach (var driver in QualifyingModel.QualifyingDrivers)
+        {
+            driver.Position = ++positionIndex;
+            driver.PositionQ2 = positionIndex;
+
+            driver.DisplayGapQ2 = GapToLeader(driver.MaxScoreQ2, highestScore);
+        }
+
+        advancedQ2++;
+    }
+
+    private void AdvanceQ3()
+    {
+        var positionIndex = 0;
+
+        foreach (var driver in QualifyingModel.QualifyingDrivers)
+            driver.RunValuesQ3[advancedQ3] = driver.GetQualifyingResult(QualifyingModel.Season.QualifyingRNG);
+
+        var highestScore = QualifyingModel.HighestScoreQ3();
+
+        foreach (var driver in QualifyingModel.QualifyingDrivers)
+        {
+            driver.Position = ++positionIndex;
+            driver.PositionQ3 = positionIndex;
+
+            driver.DisplayGapQ3 = GapToLeader(driver.MaxScoreQ3, highestScore);
+        }
+
+        advancedQ3++;
     }
 
     private async Task Finish()
     {
-        var positionResults = new Dictionary<long, int>();
-        var position = 0;
-
-        foreach (var driver in QualifyingModel.QualifyingDrivers.OrderByDescending(e => e.MaxScoreQ1))
-            positionResults.Add(driver.ResultId, ++position);
+        var positionResults = QualifyingModel.QualifyingDrivers.ToDictionary(e => e.ResultId, e => e.Position);
 
         await _raceService.PersistGridPositions(positionResults, RaceId);
 
