--- a/SimTECH/SimTECH/Pages/Racing/Qualifying.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Qualifying.razor
@@ -11,14 +11,14 @@ else
 {
     <MudTabs>
         <MudTabPanel Text="Q1">
-            <MudTable Items="@QualifyingModel.QualifyingDrivers.OrderBy(e => e.PositionQ1)">
+            <MudTable Items="@DriversInQ1.OrderBy(e => e.PositionQ1)">
                 <ToolBarContent>
                     <MudText>
-                        <CountryFlag Code="@QualifyingModel.Country" />
-                        @QualifyingModel.Name - QUALIFYING
+                        <CountryFlag Code="@Model.Country" />
+                        @Model.Name - QUALIFYING
                     </MudText>
                     <MudSpacer />
-                    @if (advancedQ1 != QualifyingModel.AmountRuns)
+                    @if (advancedQ1 != Model.AmountRuns)
                     {
                         <MudButton Variant="Variant.Outlined" OnClick="AdvanceQ1">Advance</MudButton>
                     }
@@ -29,7 +29,7 @@ else
                     <MudTh>Num</MudTh>
                     <MudTh>Team</MudTh>
                     <MudTh>PWR</MudTh>
-                    @for (int i = 1; i <= QualifyingModel.AmountRuns; i++)
+                    @for (int i = 1; i <= Model.AmountRuns; i++)
                     {
                         var j = i;
                         <MudTh>@j</MudTh>
@@ -52,108 +52,126 @@ else
                 </RowTemplate>
             </MudTable>
         </MudTabPanel>
-        <MudTabPanel Text="Q2" Disabled="@(advancedQ1 != QualifyingModel.AmountRuns)">
-            @* Sorry to say this but this is fucking disguisting way to limit who gets loaded into the qualifying table *@
-            <MudTable Items="@QualifyingModel.QualifyingDrivers.OrderBy(e => e.Position).Take(QualifyingModel.Season.QualifyingAmountQ2).OrderBy(e => e.PositionQ2)">
-                <ToolBarContent>
-                    <MudText>
-                        <CountryFlag Code="@QualifyingModel.Country" />
-                        @QualifyingModel.Name - QUALIFYING
-                    </MudText>
-                    <MudSpacer />
-                    @if (advancedQ2 != QualifyingModel.AmountRuns)
-                    {
-                        <MudButton Variant="Variant.Outlined" OnClick="AdvanceQ2">Advance</MudButton>
-                    }
-                </ToolBarContent>
-                <HeaderContent>
-                    <MudTh>#</MudTh>
-                    <MudTh>Driver</MudTh>
-                    <MudTh>Num</MudTh>
-                    <MudTh>Team</MudTh>
-                    <MudTh>PWR</MudTh>
-                    @for (int i = 1; i <= QualifyingModel.AmountRuns; i++)
-                    {
-                        var j = i;
-                        <MudTh>@j</MudTh>
-                    }
-                    <MudTh>Score</MudTh>
-                    <MudTh>Gap</MudTh>
-                </HeaderContent>
-                <RowTemplate>
-                    <MudTd>@context.PositionQ2</MudTd>
-                    <MudTd>@context.FullName</MudTd>
-                    <MudTd>@context.Number</MudTd>
-                    <MudTd>@context.TeamName</MudTd>
-                    <MudTd>@context.Power</MudTd>
-                    @foreach (var runResult in context.RunValuesQ1)
-                    {
-                        <MudTd>@runResult</MudTd>
-                    }
-                    <MudTd>@context.MaxScoreQ1</MudTd>
-                    <MudTd>@context.DisplayGapQ2</MudTd>
-                </RowTemplate>
-            </MudTable>
+        <MudTabPanel Text="Q2" Disabled="@(advancedQ1 != Model.AmountRuns)">
+            @if (DriversInQ2 != null)
+            {
+                <MudTable Items="@DriversInQ2.OrderBy(e => e.PositionQ2)">
+                    <ToolBarContent>
+                        <MudText>
+                            <CountryFlag Code="@Model.Country" />
+                            @Model.Name - QUALIFYING
+                        </MudText>
+                        <MudSpacer />
+                        @if (advancedQ2 != Model.AmountRuns)
+                        {
+                            <MudButton Variant="Variant.Outlined" OnClick="AdvanceQ2">Advance</MudButton>
+                        }
+                    </ToolBarContent>
+                    <HeaderContent>
+                        <MudTh>#</MudTh>
+                        <MudTh>Driver</MudTh>
+                        <MudTh>Num</MudTh>
+                        <MudTh>Team</MudTh>
+                        <MudTh>PWR</MudTh>
+                        @for (int i = 1; i <= Model.AmountRuns; i++)
+                        {
+                            var j = i;
+                            <MudTh>@j</MudTh>
+                        }
+                        <MudTh>Score</MudTh>
+                        <MudTh>Gap</MudTh>
+                    </HeaderContent>
+                    <RowTemplate>
+                        <MudTd>@context.PositionQ2</MudTd>
+                        <MudTd>@context.FullName</MudTd>
+                        <MudTd>@context.Number</MudTd>
+                        <MudTd>@context.TeamName</MudTd>
+                        <MudTd>@context.Power</MudTd>
+                        @foreach (var runResult in context.RunValuesQ2)
+                        {
+                            <MudTd>@runResult</MudTd>
+                        }
+                        <MudTd>@context.MaxScoreQ2</MudTd>
+                        <MudTd>@context.DisplayGapQ2</MudTd>
+                    </RowTemplate>
+                </MudTable>
+            }
         </MudTabPanel>
-        <MudTabPanel Text="Q3" Disabled="@(advancedQ2 != QualifyingModel.AmountRuns)">
-            <MudTable Items="@QualifyingModel.QualifyingDrivers.OrderBy(e => e.Position).Take(QualifyingModel.Season.QualifyingAmountQ3).OrderBy(e => e.PositionQ3)">
-                <ToolBarContent>
-                    <MudText>
-                        <CountryFlag Code="@QualifyingModel.Country" />
-                        @QualifyingModel.Name - QUALIFYING
-                    </MudText>
-                    <MudSpacer />
-                    @if (advancedQ3 == QualifyingModel.AmountRuns)
-                    {
-                        <MudButton Variant="Variant.Outlined" OnClick="Finish">Finish</MudButton>
-                    }
-                    else
-                    {
-                        <MudButton Variant="Variant.Outlined" OnClick="AdvanceQ3">Advance</MudButton>
-                    }
-                </ToolBarContent>
-                <HeaderContent>
-                    <MudTh>#</MudTh>
-                    <MudTh>Driver</MudTh>
-                    <MudTh>Num</MudTh>
-                    <MudTh>Team</MudTh>
-                    <MudTh>PWR</MudTh>
-                    @for (int i = 1; i <= QualifyingModel.AmountRuns; i++)
-                    {
-                        var j = i;
-                        <MudTh>@j</MudTh>
-                    }
-                    <MudTh>Score</MudTh>
-                    <MudTh>Gap</MudTh>
-                </HeaderContent>
-                <RowTemplate>
-                    <MudTd>@context.PositionQ3</MudTd>
-                    <MudTd>@context.FullName</MudTd>
-                    <MudTd>@context.Number</MudTd>
-                    <MudTd>@context.TeamName</MudTd>
-                    <MudTd>@context.Power</MudTd>
-                    @foreach (var runResult in context.RunValuesQ3)
-                    {
-                        <MudTd>@runResult</MudTd>
-                    }
-                    <MudTd>@context.MaxScoreQ3</MudTd>
-                    <MudTd>@context.DisplayGapQ3</MudTd>
-                </RowTemplate>
-            </MudTable>
+        <MudTabPanel Text="Q3" Disabled="@(advancedQ2 != Model.AmountRuns)">
+            @if (DriversInQ3 != null)
+            {
+                <MudTable Items="@DriversInQ3.OrderBy(e => e.PositionQ3)">
+                    <ToolBarContent>
+                        <MudText>
+                            <CountryFlag Code="@Model.Country" />
+                            @Model.Name - QUALIFYING
+                        </MudText>
+                        <MudSpacer />
+                        @if (advancedQ3 == Model.AmountRuns)
+                        {
+                            <MudButton Variant="Variant.Outlined" OnClick="Finish">Finish</MudButton>
+                        }
+                        else
+                        {
+                            <MudButton Variant="Variant.Outlined" OnClick="AdvanceQ3">Advance</MudButton>
+                        }
+                    </ToolBarContent>
+                    <HeaderContent>
+                        <MudTh>#</MudTh>
+                        <MudTh>Driver</MudTh>
+                        <MudTh>Num</MudTh>
+                        <MudTh>Team</MudTh>
+                        <MudTh>PWR</MudTh>
+                        @for (int i = 1; i <= Model.AmountRuns; i++)
+                        {
+                            var j = i;
+                            <MudTh>@j</MudTh>
+                        }
+                        <MudTh>Score</MudTh>
+                        <MudTh>Gap</MudTh>
+                    </HeaderContent>
+                    <RowTemplate>
+                        <MudTd>@context.PositionQ3</MudTd>
+                        <MudTd>@context.FullName</MudTd>
+                        <MudTd>@context.Number</MudTd>
+                        <MudTd>@context.TeamName</MudTd>
+                        <MudTd>@context.Power</MudTd>
+                        @foreach (var runResult in context.RunValuesQ3)
+                        {
+                            <MudTd>@runResult</MudTd>
+                        }
+                        <MudTd>@context.MaxScoreQ3</MudTd>
+                        <MudTd>@context.DisplayGapQ3</MudTd>
+                    </RowTemplate>
+                </MudTable>
+            }
         </MudTabPanel>
     </MudTabs>
+}
+
+@if (!loading)
+{
+    <MudContainer>
+        actual standings
+        <MudStack>
+            @foreach (var result in Model.QualifyingDrivers.OrderBy(e => e.Position))
+            {
+                <MudText>P@(result.Position). @(result.FullName) [@(result.Number)]</MudText>
+            }
+        </MudStack>
+    </MudContainer>
 }
 
 @code {
     [Parameter] public long RaceId { get; set; }
 
-    public QualifyingModel QualifyingModel { get; set; }
+    public QualifyingModel Model { get; set; }
 
     // big ass hmm about doing it like this tbh
     // this also does not work yet
-    private List<SessionDriver> DriversInQ1 { get; set; }
-    private List<SessionDriver>? DriversInQ2 { get; set; }
-    private List<SessionDriver>? DriversInQ3 { get; set; }
+    private List<QualifyingDriver> DriversInQ1 { get; set; }
+    private List<QualifyingDriver>? DriversInQ2 { get; set; }
+    private List<QualifyingDriver>? DriversInQ3 { get; set; }
 
     // Two ways to do this: three different racedriver lists for each session
     // Alternatively make a custom class which has an identifier for which session the values are
@@ -164,15 +182,8 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        QualifyingModel = await _raceService.RetrieveQualifyingModel(RaceId);
-        DriversInQ1 = QualifyingModel.QualifyingDrivers
-            .Select(e => 
-                e.CastDownwards(new SessionDriver
-                {
-                    SessionValues = new int[QualifyingModel.AmountRuns],
-                })
-            )
-            .ToList();
+        Model = await _raceService.RetrieveQualifyingModel(RaceId);
+        DriversInQ1 = Model.QualifyingDrivers;
 
         loading = false;
     }
@@ -188,12 +199,14 @@ else
     {
         var positionIndex = 0;
 
-        foreach (var driver in QualifyingModel.QualifyingDrivers)
-            driver.RunValuesQ1[advancedQ1] = driver.GetQualifyingResult(QualifyingModel.Season.QualifyingRNG);
+        foreach (var driver in DriversInQ1)
+        {
+            driver.RunValuesQ1[advancedQ1] = driver.GetQualifyingResult(Model.Season.QualifyingRNG);
+        }
 
-        var highestScore = QualifyingModel.HighestScoreQ1();
+        var highestScore = DriversInQ1.SelectMany(e => e.RunValuesQ1).Max();
 
-        foreach (var driver in QualifyingModel.QualifyingDrivers.OrderByDescending(e => e.MaxScoreQ1))
+        foreach (var driver in DriversInQ1.OrderByDescending(e => e.MaxScoreQ1))
         {
             driver.Position = ++positionIndex;
             driver.PositionQ1 = positionIndex;
@@ -203,66 +216,76 @@ else
 
         advancedQ1++;
 
-        if (advancedQ1 == QualifyingModel.AmountRuns)
+        if (advancedQ1 == Model.AmountRuns)
         {
-            DriversInQ2 = DriversInQ1.OrderBy(e => e.SessionPosition).Take(QualifyingModel.Season.QualifyingAmountQ2).ToList();
-
-            foreach (var driver in DriversInQ2)
-                driver.ResetSessionResult(QualifyingModel.AmountRuns);
+            DriversInQ2 = DriversInQ1
+                .OrderBy(e => e.PositionQ1)
+                .Take(Model.Season.QualifyingAmountQ2)
+                .ToList();
         }
     }
 
     private void AdvanceQ2()
     {
-        var positionIndex = 0;
-
-        foreach (var driver in QualifyingModel.QualifyingDrivers)
-            driver.RunValuesQ2[advancedQ2] = driver.GetQualifyingResult(QualifyingModel.Season.QualifyingRNG);
-
-        var highestScore = QualifyingModel.HighestScoreQ2();
-
-        foreach (var driver in QualifyingModel.QualifyingDrivers.OrderByDescending(e => e.MaxScoreQ2))
+        if (DriversInQ2 != null)
         {
-            driver.Position = ++positionIndex;
-            driver.PositionQ2 = positionIndex;
+            var positionIndex = 0;
 
-            driver.DisplayGapQ2 = GapToLeader(driver.MaxScoreQ2, highestScore);
-        }
+            foreach (var driver in DriversInQ2)
+            {
+                var qualifyingResult = driver.GetQualifyingResult(Model.Season.QualifyingRNG);
+                driver.RunValuesQ2[advancedQ2] = qualifyingResult;
+            }
 
-        advancedQ2++;
+            var highestScore = DriversInQ2.SelectMany(e => e.RunValuesQ2).Max();
 
-        if (advancedQ2 == QualifyingModel.AmountRuns && DriversInQ2 != null)
-        {
-            DriversInQ3 = DriversInQ2.OrderBy(e => e.SessionPosition).Take(QualifyingModel.Season.QualifyingAmountQ3).ToList();
+            foreach (var driver in DriversInQ2.OrderByDescending(e => e.MaxScoreQ2))
+            {
+                driver.Position = ++positionIndex;
+                driver.PositionQ2 = positionIndex;
 
-            foreach (var driver in DriversInQ3)
-                driver.ResetSessionResult(QualifyingModel.AmountRuns);
+                //driver.LeaderGap = GapToLeader(driver.MaxScore, highestScore);
+                driver.DisplayGapQ2 = GapToLeader(driver.MaxScoreQ2, highestScore);
+            }
+
+            advancedQ2++;
+
+            if (advancedQ2 == Model.AmountRuns)
+            {
+                DriversInQ3 = DriversInQ2
+                    .OrderBy(e => e.PositionQ2)
+                    .Take(Model.Season.QualifyingAmountQ3)
+                    .ToList();
+            }
         }
     }
 
     private void AdvanceQ3()
     {
-        var positionIndex = 0;
-
-        foreach (var driver in QualifyingModel.QualifyingDrivers)
-            driver.RunValuesQ3[advancedQ3] = driver.GetQualifyingResult(QualifyingModel.Season.QualifyingRNG);
-
-        var highestScore = QualifyingModel.HighestScoreQ3();
-
-        foreach (var driver in QualifyingModel.QualifyingDrivers.OrderByDescending(e => e.MaxScoreQ3))
+        if (DriversInQ3 != null)
         {
-            driver.Position = ++positionIndex;
-            driver.PositionQ3 = positionIndex;
+            var positionIndex = 0;
 
-            driver.DisplayGapQ3 = GapToLeader(driver.MaxScoreQ3, highestScore);
+            foreach (var driver in DriversInQ3)
+                driver.RunValuesQ3[advancedQ3] = driver.GetQualifyingResult(Model.Season.QualifyingRNG);
+
+            var highestScore = DriversInQ3.SelectMany(e => e.RunValuesQ3).Max();
+
+            foreach (var driver in DriversInQ3.OrderByDescending(e => e.MaxScoreQ3))
+            {
+                driver.Position = ++positionIndex;
+                driver.PositionQ3 = positionIndex;
+
+                driver.DisplayGapQ3 = GapToLeader(driver.MaxScoreQ3, highestScore);
+            }
+
+            advancedQ3++;
         }
-
-        advancedQ3++;
     }
 
     private async Task Finish()
     {
-        var positionResults = QualifyingModel.QualifyingDrivers.ToDictionary(e => e.ResultId, e => e.Position);
+        var positionResults = Model.QualifyingDrivers.ToDictionary(e => e.ResultId, e => e.Position);
 
         await _raceService.PersistGridPositions(positionResults, RaceId);
 
