--- a/SimTECH/SimTECH/Pages/Racing/Qualifying.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Qualifying.razor
@@ -11,6 +11,10 @@ else
 {
     <MudTabs>
         <MudTabPanel Text="Q1">
+            @*
+                Table underneath is a good target for a refactor to a component, perhaps even a nested component! 
+                Nested as in a component QualifyingSession implements a component Session (which can be implemented by practice!)
+            *@
             <MudTable Items="@DriversInQ1.OrderBy(e => e.PositionQ1)">
                 <ToolBarContent>
                     <MudText>
@@ -287,7 +291,7 @@ else
     {
         var positionResults = Model.QualifyingDrivers.ToDictionary(e => e.ResultId, e => e.Position);
 
-        await _raceService.PersistGridPositions(positionResults, RaceId);
+        await _raceService.PersistGridPositions(positionResults, RaceId, Model.Season.MaximumDriversInRace);
 
         Nav.NavigateTo("/raceweek/" + RaceId);
     }
